force-app/main/default/objects/com_smartsheet__DL_Config__c/com_smartsheet__DL_Config__c.object-meta.xml
<CustomObject>
    <label>DL_Config</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>