force-app/main/default/objects/com_smartsheet__DL_Config__c/fields/com_smartsheet__jobName__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__jobName__c</fullName>
    <defaultValue>&apos;No Name&apos;</defaultValue>
    <description>The optional name of the job</description>
    <label>jobName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>