force-app/main/default/objects/com_smartsheet__DL_Config__c/fields/com_smartsheet__objectName__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__objectName__c</fullName>
    <description>account, lead, etc</description>
    <label>objectName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>