force-app/main/default/objects/com_smartsheet__DL_Config__c/fields/com_smartsheet__seenByUser__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__seenByUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>seenByUser</label>
    <type>Checkbox</type>
</CustomField>