force-app/main/default/objects/com_smartsheet__DL_Config__c/fields/com_smartsheet__sheetPermalink__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__sheetPermalink__c</fullName>
    <label>sheetPermalink</label>
    <length>100</length>
    <type>Text</type>
</CustomField>